apps/dufs/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels: &labels
    app.kubernetes.io/component: app
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: nas
          persistentVolumeClaim:
            claimName: nas
      containers:
        - name: app
          image: docker.io/sigoden/dufs:v0.46.0@sha256:8dd3b750015734703e64b55641fb7d2254c112e0ff3967074766177dc15dc982
          args: [/data, -A]
          envFrom: []
          volumeMounts:
            - name: nas
              mountPath: /data
          resources:
            requests:
              memory: 128M
            limits:
              memory: 256M
          ports:
            - name: http
              containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels: &labels
    app.kubernetes.io/component: app
spec:
  selector: *labels
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    tailscale.com/proxy-group: ingress-proxy-group
    tailscale.com/tags: tag:k8s,tag:apps
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts: [dufs]
